# sdl-game-dev

./: .gitignore  CMakeLists.txt
include/: Game.h
src/: main.cpp
